[metadata]
name = scusage
author = tobi-wan-kenobi
author_email = github@tobi-wan-kenobi.at
url = https://github.com/tobi-wan-kenobi/scusage
project_urls =
    Documentation = https://github.com/tobi-wan-kenobi/scusage
    Code = https://github.com/tobi-wan-kenobi/scusage
    Issue tracker = https://github.com/tobi-wan-kenobi/scusage

description = analyze shortcut usage for i3wm
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
keywords = scusage, i3wm

[options]
include_package_data = True
allow_all_external = yes
trusted_host =
    github.com
packages = find:
scripts =
	./bin/scusage

[versioneer]
VCS = git
style = pep440
versionfile_source = _version.py
versionfile_build = _version.py
tag_prefix =
parentdir_prefix =
